added AZTP Parent-Child Identity Hierarchy Demo

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 blog_python/output/blogs/*
 blog_python/.env
 blog_python/venv
+parent_child_Identity_demo/parent_child_id
 
 blog_ts/package-lock.json
 blog_ts/node_modules
 blog_ts/dist
 blog_ts/.env
 
+parent_child_Identity_demo/venv
+parent_child_Identity_demo/.env
