--- a/cross_trust_domain_demo/requirements.txt
+++ b/cross_trust_domain_demo/requirements.txt
@@ -1,4 +1,4 @@
 # Requirements for Cross-Trust-Domain Identity Verification Demo
-aztp-client>=0.1.11
+aztp-client==1.0.11
 python-dotenv>=0.19.0
 termcolor>=1.1.0 
