--- a/policy_demo/package.json
+++ b/policy_demo/package.json
@@ -16,10 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aztp-client": "^1.0.19",
-    "dotenv": "^16.0.3",
-    "typescript": "^4.9.5",
     "@types/node": "^18.15.11",
-    "ts-node": "^10.9.1"
+    "aztp-client": "^1.0.23",
+    "dotenv": "^16.0.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
